# aiven-bench-loader

./: .dockerignore  .env.example  .gitignore  Dockerfile  GLOSSARY.md  Makefile  README.md  bench-plan.md  bench-plan.sh  docker-compose.clickhouse.yml  docker-compose.opensearch.yml  docker-compose.yml  openapi.yaml  pyproject.toml  requirements.txt
clickhouse/: init.sql  schema.sql
dashboard/: api.py  api_models.py  app.py  experiments.py
dashboard/pages/: 1_Login.py  2_Services.py  3_New_Test.py  4_Queue.py  5_Results.py
scripts/: README.md  build-corpus-100k.sh  build-corpus-20k.sh  build-corpus-2k.sh  build-corpus-smoke.sh  validate-corpus.sh
src/aiven_semantic_search_bench/: __main__.py  aiven_client.py  bench_hybrid.py  bench_index.py  bench_plan_change.py  bench_recall.py  bench_recover.py  bench_search.py  bench_stress.py  cli.py  clickhouse_sink.py  config.py  gemini_embedder.py  hf_embedder.py  job_queue.py  job_runner.py  job_spec.py  opensearch_client.py  report_context.py  reporter.py  stats.py  vertex_embedder.py
src/aiven_semantic_search_bench/corpus/: __init__.py  builder.py  groundtruth.py  io.py  sources.py
