[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "aiven-semantic-search-bench"
version = "0.1.0"
description = "OpenSearch k-NN benchmark loader and standalone runner — Faiss vs Lucene across 2.17, 2.19, and 3.3."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "opensearch-py>=3.1,<4",
    "numpy>=2.0,<3",
    "httpx>=0.27,<1",
]

[project.urls]
Homepage = "https://github.com/aiven/aiven-semantic-search-bench"
Repository = "https://github.com/aiven/aiven-semantic-search-bench"
Orchestrator = "https://github.com/aiven/aiven-bench-orchestrator"

[project.optional-dependencies]
# pip install -e '.[build]' — everything needed to build the embedding corpus locally.
# On Mac Apple Silicon this picks up MPS automatically via the default torch wheel.
build = [
    "sentence-transformers>=3.0,<4",
    "datasets>=3.0,<5",
    "pyarrow>=15",
]
# pip install -e '.[ui]' — the NiceGUI standalone dashboard + charting libs.
ui = [
    "nicegui>=1.4",
    "plotly>=5.22,<6",
    "pandas>=2.2,<3",
]
# pip install -e '.[loader]' — the FastAPI loader API exposed when this image
# is deployed as an Aiven Application by the aiven-bench-orchestrator.
loader = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sse-starlette>=2.1,<3",
    "prometheus-client>=0.21,<1",
]
# pip install -e '.[dev]' — everything needed for local development (corpus + UI + loader).
dev = [
    "aiven-semantic-search-bench[build,ui,loader]",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
